--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <nav class="bg-white border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="https://github.com/sudo-anshul/ci-cd-pipeline-demo" class="flex items-center">
-        <img src="https://firebasestorage.googleapis.com/v0/b/ci-cd-demo-one.appspot.com/o/devops-png.png?alt=media&token=ace71672-f1de-4231-83fc-e24483af0efe" class="h-8 mr-3" alt="Flowbite Logo" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/ci-cd-demo-one.appspot.com/o/devops-png.png?alt=media&token=ace71672-f1de-4231-83fc-e24483af0efe" class="h-8 mr-3" alt="DevOpsFlow Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">DevOpsFlow</span>
       </a>
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
