update social links

--- a/public/social.html
+++ b/public/social.html
@@ -31,35 +31,35 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <!-- Facebook -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://github.com/your-username" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/sudo-anshul" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github text-4xl text-gray-800 hover:text-gray-600"></i>
           </a>
       </div>
 
       <!-- LinkedIn -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://www.linkedin.com/in/your-username" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/anshul-kushwaha/" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-linkedin text-4xl text-blue-800 hover:text-blue-700"></i>
         </a>
       </div>
-
+    
       <!-- Telegram Group -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://t.me/your-telegram-group" target="_blank" rel="noopener noreferrer">
+        <a href="https://t.me/nexusnimbus" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-telegram text-4xl text-blue-500 hover:text-blue-400"></i>
         </a>
       </div>
 
       <!-- Instagram -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://www.instagram.com/your-username" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/sudo_anshul" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-instagram text-4xl text-pink-600 hover:text-pink-500"></i>
         </a>
       </div>
 
       <!-- Twitter -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://twitter.com/your-username" target="_blank" rel="noopener noreferrer">
+        <a href="https://twitter.com/sudo_anshul" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-twitter text-4xl text-blue-600 hover:text-blue-500"></i>
         </a>
       </div>
@@ -73,21 +73,21 @@
 
       <!-- YouTube -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="https://www.youtube.com/c/your-channel" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.youtube.com/@sudo-anshul" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-youtube text-4xl text-red-600 hover:text-red-500"></i>
         </a>
       </div>
 
       <!-- Email -->
       <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-        <a href="mailto:youremail@example.com">
+        <a href="mailto:connect.anshulkushwaha@outlook.com">
           <i class="fas fa-envelope text-4xl text-yellow-600 hover:text-yellow-500"></i>
         </a>
       </div>
 
         <!-- Website -->
         <div class="bg-white rounded-lg shadow-md p-6 flex items-center justify-center icon-container hover:bg-gray-50 transition-transform">
-            <a href="https://www.your-website.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.anshulkushwaha.com" target="_blank" rel="noopener noreferrer">
               <i class="fas fa-home text-4xl text-green-600 hover:text-green-500"></i>
             </a>
           </div>
